# amber

./: .clang-format  .gitignore  0:1  AUTHORS  Android.mk  CMakeLists.txt  CODE_OF_CONDUCT.md  CPPLINT.cfg  DEPS  Doxyfile  README.md  SECURITY.md  cooperative_mat.amber  license-checker.cfg  setup_debug_local.env
android_gradle/: .gitignore  amber.sh  build.gradle  gradle.properties  settings.gradle
android_gradle/app/: build.gradle
android_sample/: .gitignore  AndroidManifest.xml  CMakeLists.txt  License.txt  README.md  build.gradle  build.sh
android_sample/app/: CMakeLists.txt  build.gradle
android_sample/app/src/main/: AndroidManifest.xml
android_sample/app/src/main/assets/amber/: compute_ssbo.amber.vk_shader_0.spv
android_sample/app/src/main/jni/: AndroidMain.cpp  amber_script.cpp  amber_script.h  main.cpp
android_sample/assets/amber/: compute_ssbo.amber
android_sample/gradle/wrapper/: gradle-wrapper.properties
android_sample/jni/: amber_script.cc  amber_script.cpp  amber_script.h  main.cc  main.cpp
android_sample/res/values/: strings.xml
android_test/: Android.mk  test.cc
android_test/jni/: Application.mk
docs/: amber.md  amber_script.md  debugger.md  engines.md  memory_layout.md  multiple_updates_for_same_buffer.md  vk_script.md  vulkan_resource_and_descriptor.md
include/amber/: amber.h  amber_dawn.h  amber_vulkan.h  recipe.h  result.h  shader_info.h  value.h  vulkan_header.h
kokoro/android/: build-docker.sh  build.sh  presubmit.cfg
kokoro/check-format/: build.sh  presubmit.cfg
kokoro/license-check/: build-docker.sh  build.sh  continuous.cfg
kokoro/linux-clang-debug/: build.sh  presubmit.cfg
kokoro/linux-clang-release/: build.sh  presubmit.cfg
kokoro/linux-gcc-debug/: build.sh  continuous.cfg
kokoro/linux-gcc-debug-dawn/: build.sh  presubmit.cfg
kokoro/linux-gcc-release/: build.sh  presubmit.cfg
kokoro/linux-gcc-release-clspv/: build.sh  continuous.cfg
kokoro/macos-clang-debug/: build.sh  presubmit.cfg
kokoro/macos-clang-release/: build.sh  continuous.cfg
kokoro/ndk-build/: build-docker.sh  build.sh  presubmit.cfg
kokoro/windows-msvc-2017-debug/: build.bat  presubmit.cfg
kokoro/windows-msvc-2017-release/: build.bat  continuous.cfg
kokoro/windows-msvc-2019-debug/: build.bat  continuous.cfg
kokoro/windows-msvc-2019-release/: build.bat  (+1 more)
samples/: Android.mk  CMakeLists.txt  amber.cc  android_helper.cc  android_main.cc  config_helper.cc  config_helper.h  config_helper_dawn.cc  config_helper_dawn.cpp  config_helper_dawn.h  config_helper_vulkan.cc  config_helper_vulkan.h  dawn_device_metal.h  dawn_device_metal.mm  farbfeld.cc  farbfeld.h  image_diff.cc  log.cc  log.h  png.cc  png.h  ppm.cc  ppm.h  ppm_test.cc  timestamp.cc  timestamp.h
samples/jni/: Application.mk
src/: CMakeLists.txt  acceleration_structure.cc  acceleration_structure.h  amber.cc  amber_impl.cc  amber_impl.h  bit_copy.cc  bit_copy.h  bit_copy_test.cc  buffer.cc  buffer.h  buffer_data.h  buffer_test.cc  build-versions.h  cast_hash.h  clspv_helper.cc  clspv_helper.h  command.cc  command.h  command_data.cc  command_data.h  command_data_test.cc  datum_type.cc  datum_type.h  datum_type_test.cc  dawn_engine_config.cc  debug.cc  debug.h  descriptor_set_and_binding_parser.cc  descriptor_set_and_binding_parser.h  descriptor_set_and_binding_parser_test.cc  dxc_helper.cc  dxc_helper.h  engine.cc  engine.h  executor.cc  executor.h  executor_test.cc  feature.h  float16_helper.cc  (+56 more)
src/amberscript/: buffer.cc  buffer.h  buffer_test.cc  executor.cc  executor.h  parser.cc  parser.h  parser_attach_test.cc  parser_bind_test.cc  parser_blend_test.cc  parser_buffer_test.cc  parser_clear_color_test.cc  parser_clear_depth_test.cc  parser_clear_stencil_test.cc  parser_clear_test.cc  parser_compile_options_test.cc  parser_copy_test.cc  parser_debug_test.cc  parser_depth_test.cc  parser_device_feature_test.cc  parser_device_property_test.cc  parser_expect_test.cc  parser_extension_test.cc  parser_framebuffer_test.cc  parser_image_test.cc  parser_pipeline_set_test.cc  parser_pipeline_test.cc  parser_raytracing_test.cc  parser_repeat_test.cc  parser_run_test.cc  parser_run_timed_execution_test.cc  parser_sampler_test.cc  parser_set_test.cc  parser_shader_opt_test.cc  parser_shader_test.cc  parser_stencil_test.cc  parser_struct_test.cc  parser_subgroup_size_control_test.cc  parser_test.cc  parser_viewport_test.cc  (+8 more)
src/dawn/: CMakeLists.txt  device_metal.h  device_metal.mm  engine_dawn.cc  engine_dawn.h  engine_dawn_test.cc  find_dawn.cmake  helper.h  pipeline_info.h  pipeline_info_test.cc  platform.h  sleep.cc  sleep.h
src/dxcutil/: CMakeLists.txt  dxc_util.cc  dxc_util.h
src/vkscript/: command_parser.cc  command_parser.h  command_parser_test.cc  datum_type.cc  datum_type.h  datum_type_parser.cc  datum_type_parser.h  datum_type_parser_test.cc  datum_type_test.cc  executor.cc  executor.h  executor_test.cc  format_parser.cc  format_parser.h  format_parser_test.cc  nodes.cc  nodes.h  parser.cc  parser.h  parser_test.cc  script.cc  script.h  section_parser.cc  section_parser.h  section_parser_test.cc
src/vulkan/: CMakeLists.txt  amber_vulkan.cc  bit_copy.cc  bit_copy.h  bit_copy_test.cc  blas.cc  blas.h  buffer.cc  buffer.h  buffer_backed_descriptor.cc  buffer_backed_descriptor.h  buffer_descriptor.cc  buffer_descriptor.h  command.cc  command.h  command_buffer.cc  command_buffer.h  command_pool.cc  command_pool.h  compute_pipeline.cc  compute_pipeline.h  descriptor.cc  descriptor.h  device.cc  device.h  engine_vulkan.cc  engine_vulkan.h  engine_vulkan_debugger.cc  find_vulkan.cmake  format_data.cc  format_data.h  frame_buffer.cc  frame_buffer.h  graphics_pipeline.cc  graphics_pipeline.h  handle_value_with_memory.cc  handle_value_with_memory.h  image.cc  image.h  image_descriptor.cc  (+38 more)
tests/: run_tests.py
tools/: amber-mode.el  amber-syntax.vim  amber.sublime-syntax  build-amber-sample.sh  check_code_format.sh  check_language.py  check_language_test.py  copyright.py  doxy.css  format  git-sync-deps  roll-all  run-lint.sh  update_build_version.py  update_vk_wrappers.py
(+298 files in other folders)
